--- a/build.gradle
+++ b/build.gradle
@@ -33,7 +33,7 @@ repositories {
 
 dependencies {
     compile 'org.frege-lang:frege:3.23.422-ga05a487'
-    //compile 'org.frege-lang:frege-repl-core:1.4-SNAPSHOT'  // only if you need the repl
+    compile 'org.frege-lang:frege-repl-core:1.4-SNAPSHOT'  // only if you need the repl
     //compile 'org.frege-lang:frege-native-gen:1.3' // only if you need native-gen
 
 	compile 'org.frege-lang:fregefx:0.2.0-SNAPSHOT' // only if you need FregeFX (needs local install atm)
