--- a/build.gradle
+++ b/build.gradle
@@ -25,8 +25,8 @@ targetCompatibility = 1.8
 
 repositories {
     mavenLocal()
-    mavenCentral()
-    maven { // for the snapshots
+    jcenter()
+    maven { // for the snapshots -- only if you need the repl.
 	    url = "https://oss.sonatype.org/content/groups/public" 
 	}
 }
@@ -36,7 +36,7 @@ dependencies {
     compile 'org.frege-lang:frege-repl-core:1.4-SNAPSHOT'  // only if you need the repl
     //compile 'org.frege-lang:frege-native-gen:1.3' // only if you need native-gen
 
-	compile 'org.frege-lang:fregefx:0.2.0-SNAPSHOT' // only if you need FregeFX (needs local install atm)
+	compile 'org.frege-lang:fregefx:0.2.0' // only if you need FregeFX (needs local install atm)
 }
 
 fregeDoc {
