document how to use the tutorial as a quickstart base

--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,7 @@ plugins {
   id "org.frege-lang" version "0.7" // version is optional, default is latest
   id "application"
 }
+
 //mainClassName = 'MyApplication'
 mainClassName = 'CoverFlow'
 
@@ -36,7 +37,7 @@ dependencies {
     compile 'org.frege-lang:frege-repl-core:1.4-SNAPSHOT'  // only if you need the repl
     //compile 'org.frege-lang:frege-native-gen:1.3' // only if you need native-gen
 
-	compile 'org.frege-lang:fregefx:0.2.0' // only if you need FregeFX (needs local install atm)
+	compile 'org.frege-lang:fregefx:0.2.0' // only if you need FregeFX 
 }
 
 fregeDoc {
