add hint to where to change the compiler version
as asked for by Ingo

--- a/build.gradle
+++ b/build.gradle
@@ -33,6 +33,7 @@ repositories {
 }
 
 dependencies {
+    // CHANGE NEXT LINE BELOW IF YOU WANT TO USE A DIFFERENT COMPILER
     compile 'org.frege-lang:frege:3.23.422-ga05a487'
     compile 'org.frege-lang:frege-repl-core:1.4-SNAPSHOT'  // only if you need the repl
     //compile 'org.frege-lang:frege-native-gen:1.3' // only if you need native-gen
