--- a/build.gradle
+++ b/build.gradle
@@ -37,7 +37,7 @@ dependencies {
     compile 'org.frege-lang:frege-repl-core:1.4-SNAPSHOT'  // only if you need the repl
     //compile 'org.frege-lang:frege-native-gen:1.3' // only if you need native-gen
 
-	compile 'org.frege-lang:fregefx:0.2.0' // only if you need FregeFX 
+    compile 'org.frege-lang:fregefx:0.2.1-SNAPSHOT' // only if you need FregeFX 
 }
 
 fregeDoc {
