--- a/build.gradle
+++ b/build.gradle
@@ -1,14 +1,7 @@
 
-
 plugins {
   id "application" // implies java
 }
-
-// set from command line like  -DmainClassName='MyApplication'
-mainClassName = System.getProperty('mainClassName')
-//mainClassName = 'MyApplication'
-//mainClassName = 'CoverFlow'
-//mainClassName = 'Pong'
 
 ext {
 	javaTarget   = 1.8
@@ -39,12 +32,13 @@ repositories {
 	}
 }
 
+// we manage dependencies as if it was a Java project
 dependencies {
     // CHANGE NEXT LINE BELOW IF YOU WANT TO USE A DIFFERENT COMPILER
 	implementation 'org.frege-lang:frege:3.25.84'
 
     //implementation 'org.frege-lang:frege-native-gen:1.3' 	// only if you need native-gen
-    implementation 'org.frege-lang:fregefx:0.8', { 			// only if you need FregeFX (and a Java 8 with JavaFX)
+    implementation 'org.frege-lang:fregefx:0.8', { 			// only if you need FregeFX (and a Java 8 with JavaFX 8)
 		exclude module: 'frege'								// fregefx comes with a frege dependency but we
 	}														//   we prefer to use our own version
 }
