--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,9 @@ ext {
 	fregeVersion = '3.25.84'
 	fregeDir     = "${rootProject.projectDir}/lib/org/frege-lang/frege/${fregeVersion}"
 	fregeJar     = "${fregeDir}/frege-${fregeVersion}.jar"
+	fregeMainSourceDir = "${projectDir}/src/main/frege"
+	fregeTestSourceDir = "${projectDir}/src/test/frege"
+	fregeDocDir        = "${project.rootDir}/docs/fregedoc"
 }
 
 sourceCompatibility = 1.8
@@ -47,26 +50,6 @@ dependencies {
 	}														//   we prefer to use our own version
 }
 
-//fregeDoc {
-//	verbose = true
-//	module  = "$buildDir/classes/main" // should become default
-//}
-
-//fregeQuickCheck {
-//    help = true          // default: false
-//    listAvailable = true // default: false // true will not run the tests
-//    verbose = false      // default: true  // false is _very_ silent
-//    num = 500            // default: 100
-//    includePredicates = ['myFirstPred', 'mySecondPred']
-//    excludePredicates = ['myFirstPred', 'mySecondPred']
-//    moduleName = 'DummyTest'         // prio 1
-//    moduleJar  = 'path/to/my/module.jar'  // prio 2
-//    moduleDir  = "$project.buildDir/classes/test" // prio 3, default
-//    classpathDirectories = ["$project.buildDir/classes/main", "$project.buildDir/classes/test"]
-//    allJvmArgs = ['-Xss4M']
-//}
-
-
 
 task fregeCompile(type: JavaExec) {      	// https://docs.gradle.org/6.5/dsl/org.gradle.api.tasks.JavaExec.html
     group       = "frege"
@@ -87,7 +70,7 @@ task fregeCompile(type: JavaExec) {      	// https://docs.gradle.org/6.5/dsl/org
 		"-hints", 							//  print more detailed error messages and warnings
 //		"-inline", 							//  inline functions where possible
 //		"-strict-pats", 					//  check patterns in multi-argument functions strictly from left to right
-		"-comments", 						//  generate commented code
+//		"-comments", 						//  generate commented code
 //		"-explain", "i[-j]" 				//  print some debugging output from type checker
 						  					//  regarding line(s) i (to j). May help to understand
 		                  					//  inexplicable type errors better.
@@ -95,16 +78,26 @@ task fregeCompile(type: JavaExec) {      	// https://docs.gradle.org/6.5/dsl/org
 //		"-v", 								//  verbose mode on
 		"-make", 							//  build outdated or missing imports
 		"-sp",		 						//  look for source files in srcpath, default is .
-			"${projectDir}/src/main/frege",
+			fregeMainSourceDir,
 //		"-j", 								//  do not run the java compiler
 		"-ascii", 							//  do not use →, ⇒, ∀ and ∷ when presenting types,
 		                  					//  and use ascii characters for java generics variables
 //		"-greek", 							//  make greek type variables
 //		"-fraktur", 						//  make 𝖋𝖗𝖆𝖐𝖙𝖚𝖗 type variables
 		"-latin", 							//  make latin type variables
-        project.hasProperty("frege_file") ? project.frege_file : "${projectDir}/src/main/frege" //  set the file-to-compile via a -P option, if not given use "."
+        project.hasProperty("frege_file") ? project.frege_file : fregeMainSourceDir //  set the file-to-compile via a -P option, if not given use "."
 	])
 	// println commandLine // for debugging the build
+}
+// the generated *.java source files sit beside the *.class files. We
+// subsequently move them "back" into the java source dir to better play with the
+// standard tooling (e.g. the jar task and IDE assumptions).
+fregeCompile.doLast {
+	ant.move(toDir: "${projectDir}/src/main/java") {
+		fileSet(dir: sourceSets.main.java.outputDir) {
+			include name:"**/*.java"
+		}
+	}
 }
 
 // you might want to start the repl as
@@ -116,7 +109,7 @@ task fregeRepl(type: JavaExec) {
     group         = "frege"
     description   = "Start the Frege REPL on the project classpath"
 	standardInput = System.in 								// this should run interactively, so we need stdin
-    classpath     = files sourceSets.main.java.outputDir, fregeJar
+    classpath     = files sourceSets.main.java.outputDir, fregeJar // start with all compiled project classes
     main          = "frege.repl.FregeRepl"
 }
 
@@ -141,14 +134,20 @@ task fregeTestCompile(type: JavaExec) {
 			sourceSets.test.compileClasspath.asPath,
 		"-target", javaTarget,	 			//  generate code for java version n.m, also passed to javac
 		"-hints", 							//  print more detailed error messages and warnings
-		"-comments", 						//  generate commented code
 		"-make", 							//  build outdated or missing imports
 		"-sp",		 						//  look for source files in srcpath, default is .
-			"${projectDir}/src/test/frege",
+			fregeTestSourceDir,
 		"-ascii", 							//  do not use →, ⇒, ∀ and ∷ when presenting types,
 		"-latin", 							//  make latin type variables
-		"${projectDir}/src/test/frege" 		//  compile all tests
+		fregeTestSourceDir 					//  compile all tests
 	])
+}
+fregeCompile.doLast {
+	ant.move(toDir: "${projectDir}/src/test/java") {
+		fileSet(dir: sourceSets.test.java.outputDir) {
+			include name:"**/*.java"
+		}
+	}
 }
 
 task fregeTest(type: JavaExec) {
@@ -172,37 +171,37 @@ task fregeTest(type: JavaExec) {
 	])
 }
 
-task prepareDocDir {
-	ant.mkdir(dir: "${project.rootDir}/docs/fregedoc")
+task cleanFregeDoc {
+	ant.delete(dir: fregeDocDir)
 }
 
-List<String> fregeSourceModuleNames() {
-	List result = []
-	String baseDir = "${project.rootDir}/src/main/frege/"
-	new File(baseDir).eachFileRecurse(groovy.io.FileType.FILES) { file ->
-		if (! file.name.endsWith(".fr") ) return
-		String moduleName = (file.absolutePath - baseDir - ".fr").replaceAll("/",".")
-		result << moduleName
-	}
-	return result
+// the standard clean task should also clean the generated frege docs
+clean.dependsOn cleanFregeDoc
+
+task prepareDocDir {
+	ant.mkdir(dir: fregeDocDir)
 }
+
+// the standard java jar task must first create the frege classes
+jar.dependsOn fregeCompile
 
 task fregeDoc(type: JavaExec) {
-	dependsOn     fregeCompile, prepareDocDir
+	dependsOn     prepareDocDir, jar
     group         = "frege"
-    description   = "Generate the docs for all runtime classes"
+    description   = "Generate the docs for all runtime classes from jar"
     classpath     = files sourceSets.main.runtimeClasspath.asPath, fregeJar
     main          = "frege.tools.Doc"
 	args([
 		"-v", 								//  print a message for each processed module
 		"-d", 								//  specify root directory for documentation
-			"${project.rootDir}/docs/fregedoc",
+			fregeDocDir,
 //		"-cp", 								//  (additional) class path where modules can be found
 //			sourceSets.test.runtimeClasspath.asPath,
 //		"-x", 								//  exclude modules whose name starts with 'mod1' or 'mod2'
 //			"mod1,mod2",
 //		sourceSets.main.java.outputDir      //  see https://github.com/Frege/frege/issues/392
-		fregeSourceModuleNames()            //  temporary replacement
-	].flatten())
+		jar.archiveFile.get()               //  temporary replacement: create docs from jar
+	])
 }
+
 
