--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,9 @@
+// Compiles, tests, etc. any Frege code.
+// Any additional Java code will be processed afterwards and can depend on the Frege code.
+// Any Java code that Frege depends upon must be
+// - in a dependency (e.g. a Java project that this build depends on) or
+// - in a native module "inlined" in the Frege code.
+// Calling the usual java targets will also execute the respective Frege targets.
 
 plugins {
   id "application" // implies java
@@ -6,27 +12,33 @@ mainClassName = "CoverFlow"
 
 ext {
 	javaTarget   = 1.8
+	// CHANGE NEXT LINE BELOW IF YOU WANT TO USE A DIFFERENT COMPILER
+	// define your version and run "gradlew fregeInit" to download
 	fregeRelease = '3.25alpha'
 	fregeVersion = '3.25.84'
 	fregeDir     = "${rootProject.projectDir}/lib/org/frege-lang/frege/${fregeVersion}"
 	fregeJar     = "${fregeDir}/frege-${fregeVersion}.jar"
 	fregeMainSourceDir = "${projectDir}/src/main/frege"
 	fregeTestSourceDir = "${projectDir}/src/test/frege"
-	fregeDocDir        = "${project.rootDir}/docs/fregedoc"
+	fregeMainJavaDir   = "${buildDir}/src/main/frege"   // where the frege-created *.java files go
+	fregeTestJavaDir   = "${buildDir}/src/test/frege"
+	fregeDocDir        = "${project.buildDir}/docs/fregedoc"
 }
 
 sourceCompatibility = 1.8
 targetCompatibility = javaTarget
 
-// fetch frege distro from github releases and store locally
-ant.mkdir(dir: fregeDir)
-ant.get(src: "https://github.com/Frege/frege/releases/download/${fregeRelease}/frege${fregeVersion}.jar",
-		dest: fregeJar,
-		skipexisting: 'true')
-
-// prepare all the directories that the frege tasks rely upon
-ant.mkdir(dir: sourceSets.main.java.outputDir)
-ant.mkdir(dir: sourceSets.test.java.outputDir)
+task fregeInit {
+	group "frege"
+	outputs.file(fregeJar)
+	doLast {
+		// fetch frege distro from github releases and store locally
+		ant.mkdir(dir: fregeDir)
+		ant.get(src: "https://github.com/Frege/frege/releases/download/${fregeRelease}/frege${fregeVersion}.jar",
+				dest: fregeJar,
+				skipexisting: 'true')
+	}
+}
 
 repositories {
 	flatDir {
@@ -41,16 +53,26 @@ repositories {
 
 // we manage dependencies as if it was a Java project
 dependencies {
-    // CHANGE NEXT LINE BELOW IF YOU WANT TO USE A DIFFERENT COMPILER
 	implementation "org.frege-lang:frege:${fregeVersion}"
 
-    //implementation 'org.frege-lang:frege-native-gen:1.3' 	// only if you need native-gen
+	// additional dependencies
     implementation 'org.frege-lang:fregefx:0.8', { 			// only if you need FregeFX (and a Java 8 with JavaFX 8)
 		exclude module: 'frege'								// fregefx comes with a frege dependency but we
 	}														//   we prefer to use our own version
 }
 
+task prepareCompileDirs { // prepare all the directories that the frege tasks rely upon
+	group "frege"
+	outputs.dir(sourceSets.main.java.outputDir).withPropertyName("compileOutputDir")
+	outputs.dir(sourceSets.test.java.outputDir).withPropertyName("testOutputDir")
+	doLast {
+		ant.mkdir(dir: sourceSets.main.java.outputDir)
+		ant.mkdir(dir: sourceSets.test.java.outputDir)
+	}
+}
+
 task fregeCompile(type: JavaExec) {      	// https://docs.gradle.org/6.5/dsl/org.gradle.api.tasks.JavaExec.html
+	dependsOn     prepareCompileDirs
     group       = "frege"
     description = "Compile the -Pfrege_file=."
     classpath   = files fregeJar
@@ -89,10 +111,10 @@ task fregeCompile(type: JavaExec) {      	// https://docs.gradle.org/6.5/dsl/org
 	// println commandLine // for debugging the build
 }
 // the generated *.java source files sit beside the *.class files. We
-// subsequently move them "back" into the java source dir to better play with the
+// subsequently move them "back" into a java source dir to better play with the
 // standard tooling (e.g. the jar task and IDE assumptions).
 fregeCompile.doLast {
-	ant.move(toDir: "${projectDir}/src/main/java") {
+	ant.move(toDir: fregeMainJavaDir) {
 		fileSet(dir: sourceSets.main.java.outputDir) {
 			include name:"**/*.java"
 		}
@@ -115,6 +137,24 @@ fregeRepl.doFirst {
 	ant.echo "Consider starting via: gradlew --console=plain --no-daemon fregeRepl"
 }
 
+task freplStartCommands {
+	group         = "frege"
+	doLast {
+		// remove the class file from output such that it does not shadow the file
+		File classFile = new File(''+
+			sourceSets.main.java.outputDir +
+			project.frege_file.replaceAll(/^.*\/frege/,'') - ".fr" + ".class")
+		if (classFile.exists()) {
+			classFile.delete()
+			println "deleted $classFile"
+		}
+		println "Copy the following 3 lines into the console: ------------"
+		println "./gradlew --console=plain --no-daemon fregeRepl"
+		println ":load ${project.frege_file}"
+		println ":browse ${project.class_name}"
+	}
+}
+
 task fregeRun(type: JavaExec) {
 	dependsOn     fregeCompile  // in case we always want to compile before running
     group         = "frege"
@@ -126,8 +166,11 @@ task fregeRun(type: JavaExec) {
 
 
 task prepareFregeTestDir {
-	// some task seems to delete this dir, we have to re-create it since fTC needs it (why ?)
-    ant.mkdir(dir: "${buildDir}/resources/main")
+	group "frege"
+	outputs.dir("${buildDir}/resources/main").withPropertyName("outputDir")
+	doLast {
+		ant.mkdir(dir: "${buildDir}/resources/main")
+	}
 }
 
 task fregeTestCompile(type: JavaExec) {
@@ -151,7 +194,7 @@ task fregeTestCompile(type: JavaExec) {
 	])
 }
 fregeTestCompile.doLast {
-	ant.move(toDir: "${projectDir}/src/test/java") {
+	ant.move(toDir: fregeTestJavaDir) {
 		fileSet(dir: sourceSets.test.java.outputDir) {
 			include name:"**/*.java"
 		}
@@ -180,7 +223,11 @@ task fregeTest(type: JavaExec) {
 }
 
 task prepareDocDir {
-	ant.mkdir(dir: fregeDocDir)
+	group "frege"
+	outputs.dir(fregeDocDir).withPropertyName("outputDir")
+	doLast {
+		ant.mkdir(dir: fregeDocDir)
+	}
 }
 
 task fregeDoc(type: JavaExec) {
@@ -202,14 +249,8 @@ task fregeDoc(type: JavaExec) {
 	])
 }
 
-task cleanFregeDoc {
-	ant.delete(dir: fregeDocDir)
-}
-
-// the standard clean task should also clean the generated frege docs
-clean.dependsOn cleanFregeDoc
 // the standard java jar task must first create the frege classes
-compileJava.dependsOn fregeCompile
-compileTestJava.dependsOn fregeTestCompile
-test.dependsOn fregeTest
+compileJava.dependsOn 		fregeCompile
+compileTestJava.dependsOn 	fregeTestCompile
+test.dependsOn 				fregeTest
 
