--- a/build.gradle
+++ b/build.gradle
@@ -53,7 +53,7 @@ repositories {
 
 // we manage dependencies as if it was a Java project
 dependencies {
-	implementation "org.frege-lang:frege:${fregeVersion}"
+	implementation "org.frege-lang:frege:${fregeVersion}" // disable when running fregeInit
 
 	// additional dependencies
     implementation 'org.frege-lang:fregefx:0.8', { 			// only if you need FregeFX (and a Java 8 with JavaFX 8)
